--- a/configure.in
+++ b/configure.in
@@ -1480,7 +1480,8 @@ AC_ARG_ENABLE([stream-vfd],
               [AC_HELP_STRING([--enable-stream-vfd],
                               [Build the Stream Virtual File Driver
                                [default=no]])],
-              [STREAM_VFD=$enableval])
+              [STREAM_VFD=$enableval],
+              [STREAM_VFD=yes])
 
 if test "$STREAM_VFD" = "yes"; then
   AC_MSG_RESULT([yes])
