--- a/branches/hdf5_1_6/fortran/configure.in
+++ b/branches/hdf5_1_6/fortran/configure.in
@@ -277,7 +277,7 @@ AC_ARG_ENABLE([production],
                               [Determines how to run the compiler.])])
 
 case "X-$enable_production" in
-  X-yes)
+  X-|X-yes)
     AC_MSG_RESULT("production")
 
     dnl Remove the "-g" flag from CFLAGS if it's in there.
@@ -296,7 +296,7 @@ case "X-$enable_production" in
     CFLAGS="$CFLAGS $PROD_CFLAGS"
     CPPFLAGS="$CPPFLAGS $PROD_CPPFLAGS"
     ;;
-  X-|X-no)
+  X-no)
     AC_MSG_RESULT("development")
     CONFIG_MODE=development
     CFLAGS="$CFLAGS $DEBUG_CFLAGS"
