--- a/configure.in
+++ b/configure.in
@@ -1492,7 +1492,7 @@ AC_MSG_CHECKING([for Stream Virtual File Driver support])
 AC_ARG_ENABLE([stream-vfd],
               [AC_HELP_STRING([--enable-stream-vfd],
                               [Build the Stream Virtual File Driver
-                               [default=no]])],
+                               [default=yes]])],
               [STREAM_VFD=$enableval],
               [STREAM_VFD=yes])
 
