--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -1356,8 +1356,9 @@ AC_MSG_CHECKING([for Stream Virtual File Driver support])
 AC_ARG_ENABLE([stream-vfd],
               [AC_HELP_STRING([--enable-stream-vfd],
                               [Build the Stream Virtual File Driver
-                               [default=no]])],
-              [STREAM_VFD=$enableval])
+                               [default=yes]])],
+              [STREAM_VFD=$enableval],
+              [STREAM_VFD=yes])
 
 if test "$STREAM_VFD" = "yes"; then
   AC_MSG_RESULT([yes])
