--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -2294,21 +2294,22 @@ dnl ----------------------------------------------------------------------
     AC_DEFINE([HAVE_MPE], [1], [Define if we have MPE support])
   fi
 
-dnl  ----------------------------------------------------------------------
-dnl  Check if they would like the "Flexible parallel" functions compiled in
-dnl 
+  dnl ----------------------------------------------------------------------
+  dnl Check if they would like the "Flexible parallel" interface enabled
+  dnl 
   AC_MSG_CHECKING([if Flexible Parallel HDF5 interface enabled])
   AC_ARG_ENABLE([fphdf5],
                 [AC_HELP_STRING([--enable-fphdf5],
                                 [Enable the Flexible Parallel HDF5
-                                 interface])],
-                [FPHDF5=$enableval])
+                                 interface [default=no]])],
+                [FPHDF5=$enableval],
+                [FPHDF5="no"])
   if test "X$FPHDF5" = "Xyes"; then
     AC_DEFINE(HAVE_FPHDF5, 1,
               [Define if we want flexible parallel HDF5 support])
-    AC_MSG_RESULT(yes)
+    AC_MSG_RESULT([yes])
   else
-    AC_MSG_RESULT(no)
+    AC_MSG_RESULT([no])
   fi
 
   dnl ----------------------------------------------------------------------
@@ -2794,10 +2795,8 @@ PRINT "Features:"
 PRINT_N "                        dmalloc"
 IF_YES_NO "$HAVE_DMALLOC"
 
-dnl
-dnl PRINT_N "          Flexible Parallel HDF"
-dnl IF_YES_NO "$FPHDF5"
-dnl
+PRINT_N "          Flexible Parallel HDF"
+IF_YES_NO "$FPHDF5"
 
 PRINT_N "         Function Stack Tracing"
 IF_ENABLED_DISABLED "$FUNCSTACK"
