--- a/trunk/tools/h5diff/Makefile.in
+++ b/trunk/tools/h5diff/Makefile.in
@@ -32,6 +32,7 @@ TEST_SCRIPTS=$(srcdir)/testh5diff.sh
 ## These are our main targets: library and tools.
 ##
 LIBHDF5=$(top_builddir)/src/libhdf5.la
+LIBTOOLS=../lib/libh5tools.la
 
 PUB_PROGS=h5diff
 PROGS=$(PUB_PROGS) $(TEST_PROGS) 
@@ -48,11 +49,11 @@ MOSTLYCLEAN=*.h5
 
 ## Source and object files for programs...
 ##
-PROG_SRC=h5diff.c h5diff_array.c h5diff_dset.c h5diff_main.c h5diff_util.c h5trav.c h5trav_table.c test_h5diff.c
+PROG_SRC= h5diff_main.c  test_h5diff.c
 PROG_OBJ=$(PROG_SRC:.c=.lo)
-OBJS=h5diff.lo h5diff_array.lo h5diff_dset.lo h5diff_main.lo h5diff_util.lo h5trav.lo h5trav_table.lo	
+OBJS= h5diff_main.lo
 
-PRIVATE_HDR=h5trav.h h5diff.h
+PRIVATE_HDR=
 
 ## Source and object files for the tests
 ##
@@ -66,13 +67,13 @@ check test _test: $(PROGS)
 ## How to build the programs...They all depend on the hdf5 library and
 ## the tools library compiled in this directory.
 ##
-$(PROGS): $(LIBHDF5)
+$(PROGS): $(LIBTOOLS) $(LIBHDF5)
 
 h5diff: $(OBJS)
-	@$(LT_LINK_EXE) $(CFLAGS) -o $@ $(OBJS) $(LIBHDF5) $(LDFLAGS) $(LIBS)
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ $(OBJS) $(LIBTOOLS) $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 h5difftst: test_h5diff.lo
-	@$(LT_LINK_EXE) $(CFLAGS) -o $@ test_h5diff.lo $(LIBHDF5) $(LDFLAGS) $(LIBS)
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ test_h5diff.lo  $(LIBTOOLS)  $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 
 @CONCLUDE@
