Purpose: bug fix.
Description:
It sometimes complained of wrong number of argument to test.
This happened when more than 1 tool are redeployed.
The problem is due to an unquoted variable expanded into
multiple strings, confusing the test command.
Fixed by putting quotes around it.

Platforms tested:
only tested in eirene since it is trivial.

Misc. update:

--- a/tools/misc/h5redeploy.in
+++ b/tools/misc/h5redeploy.in
@@ -116,7 +116,7 @@ for x in $h5tools; do
     fi
 done
 
-if [ -z $foundtools ]; then
+if [ -z "$foundtools" ]; then
     ERROR "found no tools to modify"
     exit 1
 fi
