--- a/trunk/tools/misc/h5redeploy.in
+++ b/trunk/tools/misc/h5redeploy.in
@@ -66,7 +66,7 @@ ERROR()
 # Main
 #
 # Initialization
-h5tools="h5cc h5fc h5c++"	# possible hdf5 tools
+h5tools="h5cc h5pcc h5fc h5pfc h5c++"	# possible hdf5 tools
 foundtools=		# tools found and will be modified
 fmode=			# force mode, default is off
 prefix=`(cd ..;pwd)`
