Change --prefix default to `pwd`/hdf5, a directory in the build directory.  This eliminates the problem that the builder may not have permission to install in the default install directory. It also allows multiple builds in the same host or multiple srcdir using the same source.
Platforms tested:
Eirene plus eyeballing of changes.

Misc. update:

--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -48,6 +48,11 @@ AC_CANONICAL_HOST
 AC_SUBST([CPPFLAGS])
 
 dnl ----------------------------------------------------------------------
+dnl Set prefix default (install directory) to a directory in the build area.
+dnl This allows multiple src-dir builds within one host.
+AC_PREFIX_DEFAULT([`pwd`/hdf5])
+
+dnl ----------------------------------------------------------------------
 dnl Dump all shell variables values.
 dnl
 AC_MSG_CHECKING([shell variables initial values])
