Purpose:     Code cleanup
Description:
    Removed redundant testing script from being executed, since it's just
running the program in the "TEST_PROGS" macro.

Platforms tested:
    FreeBSD 4.9 (sleipnir)
    too minor for h5committest

--- a/tools/h5repack/Makefile.in
+++ b/tools/h5repack/Makefile.in
@@ -28,7 +28,7 @@ CPPFLAGS=-I. -I$(srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src  \
 ## Test programs and scripts.
 ##
 TEST_PROGS=h5repacktst
-TEST_SCRIPTS=$(srcdir)/h5repack.sh
+TEST_SCRIPTS=
 
 ## These are our main targets: library and tools.
 ##
